GNOME Bugzilla – Bug 771272
jackaudiosink: hangs when jackd changes sample rate and/or buffer size
Last modified: 2016-09-30 07:05:14 UTC
Created attachment 335339 [details] [review] Call jack_shutdown_cb when jack_sample_rate_cb or jack_buffer_size_cb is called. If jackd changes the buffer size or sample rate, jackaudiosink hangs and can't be stopped. This also happens if jack is configured as slave and a gstreamer pipeline is started on the slvae machine while the jack master isn't running yet. If the the jack master is started it changes the buffer size / sample rate and jackaudiosink can't be stopped.
Comment on attachment 335339 [details] [review] Call jack_shutdown_cb when jack_sample_rate_cb or jack_buffer_size_cb is called. Looks good but can you add some more information to the commit message, like why we error out there and why calling shutdown there is solving your problem and what that problem is exactly? You write all that in the bug report, but it would be good to have that in GIT too :)
Created attachment 335428 [details] [review] Call jack_shutdown_cb when jack_sample_rate_cb or jack_buffer_size_cb is called. Added more information to the commit message.
commit 1215849e69114516c93144ca590db2d751eebce7 Author: Thomas Scheuermann <Thomas.Scheuermann@barco.com> Date: Fri Sep 9 15:36:12 2016 +0200 jack: Fix pipeline hang when jack changes sample rate or buffer size If jackd changes the buffer size or sample rate, jackaudiosink hangs and can't be stopped. This also happens if jack is configured as slave and a gstreamer pipeline is started on the slave machine while the jack master isn't running yet. If the the jack master is started it changes the buffer size / sample rate and jackaudiosink can't be stopped. This fix calls jack_shutdown_cb when jack_sample_rate_cb or jack_buffer_size_cb is called. https://bugzilla.gnome.org/show_bug.cgi?id=771272